--- a/playground/src/style.css
+++ b/playground/src/style.css
@@ -1,8 +1,11 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+.dark body {
+  background-color: #333;
+}
+
+.light body {
+  background-color: #eee;
+}
+
+.custom body {
+  background-color: red;
 }
